deployment/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-busters
spec:
  selector:
    matchLabels:
      app: bot-busters
  template:
    spec:
      containers:
        - name: bot-busters
          image: bot-busters
