deployment/local/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: ankane/pgvector:latest
          volumeMounts:
            - name: postgres-data
              mountPath: /data
          ports:
            - containerPort: 5432
              name: http
              protocol: TCP

        - name: adminer
          image: adminer
          ports:
            - containerPort: 8080
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
